fix(OOUI): 🐛 standardize OOUI window z-index
The original z-index (4) was too low and inconsistent with Citizen and Codex.
This should also fix the z-index issues related to OOUI

--- a/skinStyles/ooui/oojs-ui-windows.less
+++ b/skinStyles/ooui/oojs-ui-windows.less
@@ -8,6 +8,8 @@
  * Date: 2022-11-30
 */
 
+@import '../../resources/variables.less';
+
 /**
  * OOUI has some layout issues when the font size is not
  * same as what is being used in Vector. This is a dirty
@@ -15,6 +17,12 @@
  */
 .oo-ui-window {
 	font-size: 0.875rem;
+}
+
+// Align z-index stack with Citizen and Codex
+// T285592
+.oo-ui-windowManager-modal > .oo-ui-dialog {
+	z-index: @z-index-overlay;
 }
 
 .oo-ui-messageDialog-content > .oo-ui-window-foot {
